<resources>
    <string name="app_name">ProxiPlan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_new_task">Create New Task</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="create_account">Create an Account</string>
    <string name="password_standards">• Minimum 12 characters long\n• At least one uppercase character\n• At least one lowercase character\n• At least one special character</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_match">Password does not match</string>
    <string name="username_exists">Username already exists</string>
    <string name="email_registered">This email is already registered</string>
    <string name="generic_error">Something went wrong. Please try again.</string>
    <string name="invalid_fields">Some fields have invalid values.\nPlease try again</string>
    <string name="invalid_credentials">Username or password is incorrect</string>
    <string name="welcome_dashboard">Welcome to your Task Dashboard!</string>
    <string name="task_name_required">Task Name is required</string>
    <string name="minutes">minutes</string>
    <string name="select_date_time">Please select a date and time</string>
    <string name="task_deadline_required">Task Deadline is required</string>
    <string name="create_task">Task Create</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_created_successfully">Task Created Successfully</string>
    <string name="task_creation_failed">Task Creation Failed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="task_deadline">Task Deadline</string>
    <string name="time_to_notify">Time to Notify</string>
    <string name="not_logged_in">\"User must be logged in to create a task!\"</string>
    <string name="no_username">User does not have a displayName</string>
    <string name="task_location_required">Task Location is required</string>

</resources>